adding data preprocessing

--- a/Visualization/Matplotlib/Advanced Matplotlib .ipynb
+++ b/Visualization/Matplotlib/Advanced Matplotlib .ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advanced Matplotlib Concepts Lecture\n",
+    "## Advanced Matplotlib: Machine Learning Sessions\n",
+    "### Part II: Data Visualization\n",
     "\n",
-    "In this lecture we  cover some more advanced topics which you won't usually use as often. You can always reference the documentation for more resources!"
+    "\n",
+    "**We will see various not so commonly used plots. I have referenced plt library for majority of plots**"
    ]
   },
   {
@@ -982,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
